added some images

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Fourth Repo</title>
-    <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-    <img src="car.png" alt="ht" width="100px"><br><br>
-    <img src="w3logo.jpeg" alt="btt" width="100px">
+    <img src="../images/car.png" alt="ht" width="100px"><br><br>
+    <img src="../images/w3logo.jpeg" alt="btt" width="100px">
 
-
+    
     
 </body>
 </html>
